--- a/installer/install_scripts/install_pre.yml
+++ b/installer/install_scripts/install_pre.yml
@@ -2,41 +2,41 @@
 # ansible install playbook that does the prep work for rita V2.
 # Version: 202408061413
 # sample runs:
-# 	Optional: Add the following block, without #'s  to /etc/ansible/hosts (or /opt/local/etc/ansible/hosts if using ansible on mac with mac ports).
-# The hosts must each be on their own line.  These can be full or short hostnames or a name following "Host" in ~/.ssh/config .
+#   Optional: Add the following block, without #'s to /etc/ansible/hosts (or /opt/local/etc/ansible/hosts if using ansible on mac with mac ports).
+# The hosts must each be on their own line. These can be full or short hostnames or a name following "Host" in ~/.ssh/config.
 #
 # [allritas]
 # ro810
 # ub2404
 #
-# 	Then run this, with a comma separated list of hostnames from the above file with a comma at the end of the list:
+#   Then run this, with a comma separated list of hostnames from the above file with a comma at the end of the list:
 #
-# 	ansible-playbook -C -K -i "ro810,ub2404," -e "install_hosts=ro810,ub2404," ~/.ansible/playbooks/rita-install.yml | grep -v '^skipping: '	#-C (no changes) means do a dry run
-# 	ansible-playbook -K -i "ro810,ub2404," -e "install_hosts=ro810,ub2404," ~/.ansible/playbooks/rita-install.yml | grep -v '^skipping: '
+#   ansible-playbook -C -K -i "ro810,ub2404," -e "install_hosts=ro810,ub2404," ~/.ansible/playbooks/rita-install.yml | grep -v '^skipping: '  #-C (no changes) means do a dry run
+#   ansible-playbook -K -i "ro810,ub2404," -e "install_hosts=ro810,ub2404," ~/.ansible/playbooks/rita-install.yml | grep -v '^skipping: '
 
 # Many thanks to but-i-am-dominator for his help with this playbook.
 
 - name: "RITA Pre: System prep and checks."
-  hosts: "{{  install_hosts  }}"
+  hosts: "{{ install_hosts }}"
   become: true
 
   vars:
-    ansible_python_interpreter: /bin/python3 # Centos 7 defaults to using python2, so we force python 3.  This change does not break any other distros
+    ansible_python_interpreter: /bin/python3 # Centos 7 defaults to using python2, so we force python 3. This change does not break any other distros
 
   #Early tasks needed to support the rest of the install
   pre_tasks:
     #Known distribution?
     - name: "RITA Pre: Checking Linux distribution."
       ansible.builtin.fail:
-        msg: "Distribution name: {{  ansible_distribution  }} does not appear to be recognized - please contact ACM"
+        msg: "Distribution name: {{ ansible_distribution }} does not appear to be recognized - please contact ACM"
       when: ( ansible_distribution != 'AlmaLinux' and ansible_distribution != 'CentOS' and ansible_distribution != 'Fedora' and ansible_distribution != 'OracleLinux' and ansible_distribution != 'Pop!_OS' and ansible_distribution != 'Rocky' and ansible_distribution != 'Debian' and ansible_distribution != 'Ubuntu' and ansible_distribution != 'Kali' and ansible_distribution != 'Zorin OS' and ansible_distribution != 'RedHat' )
       tags:
         - linux
 
     - name: "RITA Pre: Checking Linux distribution version."
       ansible.builtin.fail:
-        msg: "Warning: Linux distribution {{  ansible_distribution  }} {{  ansible_distribution_major_version  }} may not have been tested - please contact ACM and report whether the install worked or not"
-      when: ( ( ansible_distribution == 'AlmaLinux' and (ansible_distribution_major_version != '9') ) or ( ansible_distribution == 'CentOS' and (ansible_distribution_major_version != '7' and ansible_distribution_major_version != '9') ) or ( ansible_distribution == 'Fedora' and (ansible_distribution_major_version != '40') ) or ( ansible_distribution == 'OracleLinux' and (ansible_distribution_major_version != '9') ) or ( ansible_distribution == 'Pop!_OS' and (ansible_distribution_major_version != '22') ) or ( ansible_distribution == 'Rocky' and (ansible_distribution_major_version != '8' and ansible_distribution_major_version != '9') ) or ( ansible_distribution == 'Debian' and (ansible_distribution_major_version != '12') ) or ( ansible_distribution == 'Kali' and (ansible_distribution_major_version != '2024') )  or ( ansible_distribution == 'Ubuntu' and (ansible_distribution_major_version != '20' and ansible_distribution_major_version != '22' and ansible_distribution_major_version != '24') ) or ( ansible_distribution == 'Zorin OS' and (ansible_distribution_major_version != '16') ) or ( ansible_distribution == 'RedHat' and (ansible_distribution_major_version != '9') ) )
+        msg: "Warning: Linux distribution {{ ansible_distribution }} {{ ansible_distribution_major_version }} may not have been tested - please contact ACM and report whether the install worked or not"
+      when: ( ( ansible_distribution == 'AlmaLinux' and (ansible_distribution_major_version != '9') ) or ( ansible_distribution == 'CentOS' and (ansible_distribution_major_version != '7' and ansible_distribution_major_version != '9') ) or ( ansible_distribution == 'Fedora' and (ansible_distribution_major_version != '40') ) or ( ansible_distribution == 'OracleLinux' and (ansible_distribution_major_version != '9') ) or ( ansible_distribution == 'Pop!_OS' and (ansible_distribution_major_version != '22') ) or ( ansible_distribution == 'Rocky' and (ansible_distribution_major_version != '8' and ansible_distribution_major_version != '9') ) or ( ansible_distribution == 'Debian' and (ansible_distribution_major_version != '12') ) or ( ansible_distribution == 'Kali' and (ansible_distribution_major_version != '2024') ) or ( ansible_distribution == 'Ubuntu' and (ansible_distribution_major_version != '20' and ansible_distribution_major_version != '22' and ansible_distribution_major_version != '24') ) or ( ansible_distribution == 'Zorin OS' and (ansible_distribution_major_version != '16') ) or ( ansible_distribution == 'RedHat' and (ansible_distribution_major_version != '9') ) )
       ignore_errors: True #We print a warning but do not abort if this is an unknown combination of distribution and major version.
       tags:
         - linux
@@ -44,8 +44,8 @@
     #CPU Architecture
     - name: "RITA Pre: Check system architecture."
       ansible.builtin.fail:
-        msg: "Unsupported CPU architecture: {{  ansible_architecture  }}"
-      when: ( ansible_architecture != "x86_64" ) #and ansible_architecture != "aarch64" ) # "aarch64" for pi.  #pi0w is armv6l.  i386.  amd64?
+        msg: "Unsupported CPU architecture: {{ ansible_architecture }}"
+      when: ( ansible_architecture != "x86_64" ) #and ansible_architecture != "aarch64" ) # "aarch64" for pi. #pi0w is armv6l. i386. amd64?
 
     #Add tools needed by later stages
     # Provides "needs-restarting" for ansible's ability to manage rebooting after patching
@@ -126,7 +126,7 @@
         - linux
         - linuxrpm
       when: ( ansible_distribution == 'AlmaLinux' or ansible_distribution == 'CentOS' or ansible_distribution == 'Fedora' or ansible_distribution == 'RedHat' or ansible_distribution == 'Rocky' )
-      #  or ansible_distribution == 'OracleLinux'		#Note: OracleLinux, and therefore SecurityOnion too, do not include pip3.  Disabled.
+      #  or ansible_distribution == 'OracleLinux'		#Note: OracleLinux, and therefore SecurityOnion too, do not include pip3. Disabled.
 
     - name: "RITA Pre: Patch and install packages on debian-based servers."
       block:
@@ -193,11 +193,11 @@
         - linuxdeb
       when: ( ansible_distribution == 'Kali' )
 
-    #Add repositories
+    # Add repositories
+    # Note that apt-key is deprecated and that directly downloading the key to trusted.gpg.d WITH A .asc EXTENSION is the correct way now.
     - name: "RITA Pre: Add Docker Ubuntu GPG apt key."
       block:
         - name: "RITA Pre: Download Docker Ubuntu GPG apt key with get_url module."
-
           get_url:
             url: https://download.docker.com/linux/ubuntu/gpg
             dest: /etc/apt/trusted.gpg.d/docker-ubuntu.asc
@@ -231,7 +231,7 @@
 
     - name: "RITA Pre: Add Docker Repository to Ubuntu or Debian."
       apt_repository:
-        repo: deb https://download.docker.com/linux/{{  ansible_distribution|lower  }} {{  ansible_distribution_release  }} stable
+        repo: deb https://download.docker.com/linux/{{ ansible_distribution|lower }} {{ ansible_distribution_release }} stable
         state: present
       when: ( ansible_distribution == 'Ubuntu' or ansible_distribution == 'Debian' )
       tags:
@@ -415,7 +415,7 @@
         - name: "RITA Pre: Uninstall unofficial docker packages on rpm-based distributions."
           yum:
             name:
-              - python3-requests #As of 20240618, issue with requests code: "Error connecting: Error while fetching server API version: Not supported URL scheme http+docker".  Installing requests with pip appears to install a newer version that handles the issue.
+              - python3-requests #As of 20240618, issue with requests code: "Error connecting: Error while fetching server API version: Not supported URL scheme http+docker". Installing requests with pip appears to install a newer version that handles the issue.
             state: absent
             update_cache: true
           tags:
@@ -464,6 +464,24 @@
         owner: root
         group: root
         mode: 0755
+      tags:
+        - docker
+        - linux
+        - linuxdeb
+        - linuxrpm
+
+    #This keypair will be used for all transfers between all zeek sensors and all achunter systems.
+    #Note that if there's an existing key it will not be overwritten. Keypair will be placed in the playbook directory.
+    #Note: formerly used {{ playbook_dir }}
+    - name: "RITA Pre: Generate ssh keypair for log transfers"
+      local_action:
+        module: "user"
+        name: "{{ lookup('env','USER') }}"
+        generate_ssh_key: true
+        ssh_key_type: "rsa"
+        ssh_key_bits: 4096
+        ssh_key_file: "{{ lookup('env', 'PWD') }}/id_rsa_dataimport"
+      # when: ansible_connection != "local"
       tags:
         - docker
         - linux
