--- a/.env.production
+++ b/.env.production
@@ -9,6 +9,8 @@ CONFIG_FILE=/etc/rita/config.hjson
 SYSLOG_ADDRESS=syslogng:5514
 APP_LOGS=/var/log/rita
 DB_ADDRESS=db:9000
+CLICKHOUSE_USERNAME=default
+CLICKHOUSE_PASSWORD=
 LOGGING_ENABLED=true
 LOG_LEVEL=1
 
