--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -11,9 +11,9 @@ services:
         condition: service_healthy
     volumes:
       - ${CONFIG_FILE:-/etc/rita/config.hjson}:/config.hjson
-      - ${CONFIG_DIR:-/etc/rita}/http_extensions_list.csv:/http_extensions_list.csv
+      - ${CONFIG_DIR:-/etc/rita}/http_extensions_list.csv:${CONFIG_DIR:-/etc/rita}/http_extensions_list.csv
+      - ${CONFIG_DIR:-/etc/rita}/threat_intel_feeds:${CONFIG_DIR:-/etc/rita}/threat_intel_feeds
       - /opt/rita/.env:/.env
-      # - ${LOGS:?"You must provide a directory for logs to be read from"}:/logs:ro
     links:
       - "clickhouse:db"
       - "syslog-ng:syslogng"
