--- a/installer/install_scripts/install_rita.yml
+++ b/installer/install_scripts/install_rita.yml
@@ -1,20 +1,4 @@
----
-# ansible install playbook for rita V2.
-# Version: 202408061413
-# sample runs:
-#   Optional: Add the following block, without #'s to /etc/ansible/hosts (or /opt/local/etc/ansible/hosts if using ansible on mac with mac ports).
-# The hosts must each be on their own line. These can be full or short hostnames or a name following "Host" in ~/.ssh/config.
-#
-# [allritas]
-# ro810
-# ub2404
-#
-#   Then run this, with a comma separated list of hostnames from the above file with a comma at the end of the list:
-#
-#   ansible-playbook -C -K -i "ro810,ub2404," -e "install_hosts=ro810,ub2404," ~/.ansible/playbooks/rita-install.yml | grep -v '^skipping: '  #-C (no changes) means do a dry run
-#   ansible-playbook -K -i "ro810,ub2404," -e "install_hosts=ro810,ub2404," ~/.ansible/playbooks/rita-install.yml | grep -v '^skipping: '
-
-# Many thanks to but-i-am-dominator for his help with this playbook.
+# ansible install playbook for rita
 
 - name: "RITA Install: RITA installer."
   hosts: "{{ install_hosts }}"
@@ -24,13 +8,13 @@
     rita_version: "REPLACE_ME"
     rita_container_image: "ghcr.io/activecm/rita:{{ rita_version }}"
     clickhouse_container_image: clickhouse/clickhouse-server:latest
-    ansible_python_interpreter: /bin/python3 # Centos 7 defaults to using python2, so we force python 3. This change does not break any other distros
+    ansible_python_interpreter: /bin/python3
 
-  #The install_pre.yml script should already have been run by this point
+  # the install_pre.yml script should already have been run by this point
 
   tasks:
-    #Make directories
-    - name: "RITA Install: Create configuration directories."
+    # make directories
+    - name: "RITA Install: Create configuration directories"
       ansible.builtin.file:
         path: "{{ item }}"
         state: directory
@@ -47,9 +31,9 @@
         - linuxdeb
         - linuxrpm
 
-    #Install RITA
-    #Following pulls right from dockerhub. We may not be able to do this if the system is airgapped
-    - name: "RITA Install: Install {{ rita_container_image }} docker image."
+    # install RITA
+    # the following pulls right from dockerhub. We may not be able to do this if the system is airgapped
+    - name: "RITA Install: Install {{ rita_container_image }} docker image"
       block:
         - name: "Pull from Github.io Container repo"
           community.docker.docker_image:
@@ -68,8 +52,8 @@
           community.docker.docker_image_load:
             path: "/opt/rita/rita-{{ rita_version }}-image.tar"
           register: load_result
-          #This final one prints a list of the loaded images if we use the above 2 stanzas to load from a file.
-        - name: "RITA Install: Print loaded image names."
+          # this final one prints a list of the loaded images if we use the above 2 stanzas to load from a file
+        - name: "RITA Install: Print loaded image names"
           ansible.builtin.debug:
             msg: "Loaded the following images: {{ load_result.image_names | join(', ') }}"
       tags:
@@ -79,7 +63,7 @@
         - linuxdeb
         - linuxrpm
 
-    - name: "RITA Install: Transfer rita shell script to target system."
+    - name: "RITA Install: Transfer rita shell script to target system"
       copy:
         src: ./opt/rita.sh
         dest: /usr/local/bin/rita
@@ -93,7 +77,7 @@
         - linuxdeb
         - linuxrpm
 
-    - name: "RITA Install: Transfer rita install files to /opt/rita."
+    - name: "RITA Install: Transfer rita install files to /opt/rita"
       copy:
         src: ./opt/
         dest: /opt/rita
@@ -107,7 +91,7 @@
         - linuxdeb
         - linuxrpm
 
-    - name: "RITA Install: Transfer rita user files to /etc/rita."
+    - name: "RITA Install: Transfer rita user files to /etc/rita"
       copy:
         src: ./etc/
         dest: /etc/rita
@@ -120,4 +104,3 @@
         - linux
         - linuxdeb
         - linuxrpm
-#The install_post.yml script should be run next
